frontend/src/app/recipe-card/recipe-card.component.css
mat-card {
  padding: 10px;
}

mat-card-content {
  display: grid;
  grid-template-columns: 100px 1fr;
  gap: 0 10px;
  height: 80px;
}

.card-content__thumbnail-container {
  height: inherit;
  position: relative;
}

.card-content__thumbnail-container__thumbnail {
  width: 100%;
  border-radius: 5px;
  height: 100%;
  object-fit: cover;
}

.card-content__thumbnail-container__thumbnail--no-image {
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  margin: auto;
}

.card-content__button-favorite {
  position: absolute;
  top: 10px;
  right: 10px;
}

